[package]
name = "rdb"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bincode = "1.3.3"
color-eyre = "0.6.2"
lru = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
uuid = { version = "1.1.2", features = ["v4"] }
