[package]
name = "rdb"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
bincode = "1.3.3"
color-eyre = "0.6.2"
lru = "0.9.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4"] }
